--- a/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
@@ -163,7 +163,7 @@ figure.snip1200:hover p, figure.snip1200.hover p {
 }
 
 .moreClass:hover {
-	color: #fa91a2;
+	color: #0d6efd;;
 	cursor: pointer;
 }
 
