--- a/HPP/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/common.css
@@ -152,6 +152,16 @@
 .lh195px{line-height:195px;} 
 .lh200px{line-height:200px;} 
 
+.fs1-1{font-size: 1.1rem;}
+.fs1-2{font-size: 1.2rem;}
+.fs1-3{font-size: 1.3rem;}
+.fs1-4{font-size: 1.4rem;}
+.fs1-5{font-size: 1.5rem;}
+.fs1-6{font-size: 1.6rem;}
+.fs1-7{font-size: 1.7rem;}
+.fs1-8{font-size: 1.8rem;}
+.fs1-9{font-size: 1.9rem;}
+    
 .col-width-8{max-width: 80px;}
 .col-width-8 th, .col-width-8 td{max-width: 80px;}
 
