--- a/HPP/src/main/webapp/WEB-INF/resources/css/market/enterpriseView.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/market/enterpriseView.css
@@ -20,10 +20,11 @@
 }
 
 #marketContent{
-	flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between; /* 모든 자식 요소를 수직으로 정렬하고, #btnBox를 아래로 밀어냄 */
+    overflow: hidden;
+    width: 100%;
 }
 
 #marketContent * {
@@ -47,6 +48,18 @@
     text-align: right; /* 내부 텍스트를 오른쪽으로 정렬 */
     align-items: flex-end; /* 버튼들을 오른쪽으로 정렬 */
     margin-bottom: 0; /* 마지막 요소이므로 아래 여백 제거 */
+}
+
+#proName {
+    display: inline-block;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#proName:hover {
+    overflow: auto;
+    text-overflow: clip;
 }
 
 .productInfo{
