--- a/HPP/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/common.css
@@ -21,6 +21,12 @@
 .redText{color: red;}
 .blueText{color: blue;}
 
+.over-auto{overflow: auto;}
+.over-hidden{overflow: hidden;}
+
+.tx-over-clip{text-overflow: clip;}
+.tx-over-ellipsis{text-overflow: ellipsis;}
+
 .vh100{height: 100vh;}
 .vw100{width: 100vw;}
 
@@ -45,6 +51,125 @@
 .w90{width:90%;} 
 .w95{width:95%;} 
 .w100{width:100%;} 
+
+.max-w0{max-width:0%;} 
+.max-w5{max-width:5%;} 
+.max-w10{max-width:10%;} 
+.max-w15{max-width:15%;} 
+.max-w20{max-width:20%;} 
+.max-w25{max-width:25%;} 
+.max-w30{max-width:30%;} 
+.max-w35{max-width:35%;} 
+.max-w40{max-width:40%;} 
+.max-w45{max-width:45%;} 
+.max-w50{max-width:50%;} 
+.max-w55{max-width:55%;} 
+.max-w60{max-width:60%;} 
+.max-w65{max-width:65%;} 
+.max-w70{max-width:70%;} 
+.max-w75{max-width:75%;} 
+.max-w80{max-width:80%;} 
+.max-w85{max-width:85%;} 
+.max-w90{max-width:90%;} 
+.max-w95{max-width:95%;} 
+.max-w100{max-width:100%;} 
+
+.max-width-120 {
+    max-width: 120px;
+}
+
+.max-width-90 {
+    max-width: 90px;
+}
+
+.max-width-300 {
+    max-width: 300px;
+}
+
+.max-w0px{max-width:0px;} 
+.max-w5px{max-width:5px;} 
+.max-w10px{max-width:10px;} 
+.max-w15px{max-width:15px;} 
+.max-w20px{max-width:20px;} 
+.max-w25px{max-width:25px;} 
+.max-w30px{max-width:30px;} 
+.max-w35px{max-width:35px;} 
+.max-w40px{max-width:40px;} 
+.max-w45px{max-width:45px;} 
+.max-w50px{max-width:50px;} 
+.max-w55px{max-width:55px;} 
+.max-w60px{max-width:60px;} 
+.max-w65px{max-width:65px;} 
+.max-w70px{max-width:70px;} 
+.max-w75px{max-width:75px;} 
+.max-w80px{max-width:80px;} 
+.max-w85px{max-width:85px;} 
+.max-w90px{max-width:90px;} 
+.max-w95px{max-width:95px;} 
+.max-w100px{max-width:100px;} 
+.max-w105px{max-width:105px;} 
+.max-w110px{max-width:110px;} 
+.max-w115px{max-width:115px;} 
+.max-w120px{max-width:120px;} 
+.max-w125px{max-width:125px;} 
+.max-w130px{max-width:130px;} 
+.max-w135px{max-width:135px;} 
+.max-w140px{max-width:140px;} 
+.max-w145px{max-width:145px;} 
+.max-w150px{max-width:150px;} 
+.max-w155px{max-width:155px;} 
+.max-w160px{max-width:160px;} 
+.max-w165px{max-width:165px;} 
+.max-w170px{max-width:170px;} 
+.max-w175px{max-width:175px;} 
+.max-w180px{max-width:180px;} 
+.max-w185px{max-width:185px;} 
+.max-w190px{max-width:190px;} 
+.max-w195px{max-width:195px;} 
+.max-w200px{max-width:200px;} 
+.max-w300px{max-width:300px;} 
+
+.w0px{width:0px;} 
+.w5px{width:5px;} 
+.w10px{width:10px;} 
+.w15px{width:15px;} 
+.w20px{width:20px;} 
+.w25px{width:25px;} 
+.w30px{width:30px;} 
+.w35px{width:35px;} 
+.w40px{width:40px;} 
+.w45px{width:45px;} 
+.w50px{width:50px;} 
+.w55px{width:55px;} 
+.w60px{width:60px;} 
+.w65px{width:65px;} 
+.w70px{width:70px;} 
+.w75px{width:75px;} 
+.w80px{width:80px;} 
+.w85px{width:85px;} 
+.w90px{width:90px;} 
+.w95px{width:95px;} 
+.w100px{width:100px;} 
+.w105px{width:105px;} 
+.w110px{width:110px;} 
+.w115px{width:115px;} 
+.w120px{width:120px;} 
+.w125px{width:125px;} 
+.w130px{width:130px;} 
+.w135px{width:135px;} 
+.w140px{width:140px;} 
+.w145px{width:145px;} 
+.w150px{width:150px;} 
+.w155px{width:155px;} 
+.w160px{width:160px;} 
+.w165px{width:165px;} 
+.w170px{width:170px;} 
+.w175px{width:175px;} 
+.w180px{width:180px;} 
+.w185px{width:185px;} 
+.w190px{width:190px;} 
+.w195px{width:195px;} 
+.w200px{width:200px;} 
 
 .h0{height:0%;} 
 .h5{height:5%;} 
