* 로그인 로그 수정 * 게스트 계정 생성 및 설정 * 권한 없는 사용자가 저장 -> 권한 없음 표시 * 권한 없는 사용자가 페이지 접근 -> 권한 없음 표시

--- a/HPP/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/common.css
@@ -18,8 +18,9 @@
 
 .blackText{color: black;}
 .whiteText{color: white;}
+.grayText{color: #3b3939;}
 .redText{color: red;}
-.blueText{color: blue;}
+.blueText{color: #0e0eb9;}
 
 .over-auto{overflow: auto;}
 .over-hidden{overflow: hidden;}
@@ -127,7 +128,8 @@
 .max-w190px{max-width:190px;} 
 .max-w195px{max-width:195px;} 
 .max-w200px{max-width:200px;} 
-.max-w300px{max-width:300px;} 
+.max-w300px{max-width:300px;}
+.max-w400px{max-width:400px;} 
 
 .w0px{width:0px;} 
 .w5px{width:5px;} 
