사용자 관리 메뉴 개발

--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -738,3 +738,7 @@ label{
 	font-weight: bold;
 }
 /* 예외 페이지(error.jsp) 관련 끝 */
+
+.modal a.close-modal{
+	background-image : url("/resources/images/etc/remove_red.png"); 
+}
